package com.keskin.users.infrastructure.persistence.repository;

import com.keskin.users.infrastructure.persistence.entity.UserEntity;
import org.springframework.data.jpa.repository.JpaRepository;

import java.util.Optional;
import java.util.UUID;

public interface JpaUserRepository extends JpaRepository<UserEntity, UUID> {
    boolean existsByEmailAndDeletedFalse(String email);

    Optional<UserEntity> findByEmailAndDeletedFalse(String email);

}